<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kitt</string>
    
    <string name="titleLed">LED灯</string>
    <string name="titleLedEdit">添加LED灯</string>
    <string name="titleLedSearch">寻灯</string>
    <string name="titleAppliances">家电</string>
    <string name="titleSecurity">安防</string>
    <string name="titleCar">汽车</string>
    <string name="titleSetting">系统设置</string>

    <!-- led控制页面 -->
    <string name="ledPower">开关</string>
    <string name="ledNightlight">小夜灯</string>
    <string name="ledGroup1">A组</string>
    <string name="ledGroup2">B组</string>
    <string name="ledGroup3">C组</string>
    <string name="ledGroup4">D组</string>
    
    <string name="falsh1">跳跃</string>
    <string name="falsh2">水纹</string>
    <string name="falsh3">接触</string>
    <string name="falsh4">鬼闪</string>
    <string name="falsh5">爆闪</string>
    <string name="falsh6">警报</string>
    <string name="colorSelectorDescription">色彩选择器</string>
    
    <string name="passwordHint">请输入密码</string>
    <string name="passwordTips">密码建议设置成：大小写+字母+数字+字符，总共16位。</string>
    <string name="cancel">取消</string>
    <string name="enter">确定</string>
    <string name="save">保存</string>
    
    <string name="titleSetSleep">设置睡眠模式时间</string>
    <string name="titleSetTimingOpen">设置定时开灯时间</string>
    <string name="titleSetTimingClose">设置定时关灯时间</string>
    <string name="titleManual">操作手册</string>
    <string name="titleAboutUs">关于我们</string>
    
    <string name="sleepTimeFormat">睡眠模式：%d分钟</string>
    <string name="timingOpenFormat" formatted="false">定时开灯：%s : %s</string>
    <string name="timingCloseFormat" formatted="false">定时关灯：%s : %s</string>
    
    
    <!-- 设置页面 -->
    <string name="appName">HOME KITT</string>
    <string name="appNameChinese">智能家居控制系统</string>
    
    <string name="groupA">A组</string>
    <string name="groupB">B组</string>
    <string name="groupC">C组</string>
    <string name="groupD">D组</string>
    
    <!-- 通用  -->
    <string name="group">组</string>
    <string name="hours">小时</string>
    <string name="minutes">分钟</string>
    <string name="delete">删除</string>
    <string name="update">更新</string>
    
    <string name="deleteLedPrompt">确定删除该灯？</string>
    
</resources>