<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="10dip">
        
    <TextView android:id="@+id/ledNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="大厅灯"
        android:textSize="16sp" />
    
    <LinearLayout android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="horizontal">
        
        <TextView android:id="@+id/groupATv"
            android:text="@string/groupA"
            android:textSize="16sp"
	        android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1.0"
            android:layout_width="0dip"
            android:layout_height="wrap_content"/>
        
        <TextView android:id="@+id/groupBTv"
            android:text="@string/groupB"
            android:gravity="center"
            android:textSize="16sp"
	        android:textColor="@color/black"
            android:layout_weight="1.0"
            android:layout_width="0dip"
            android:layout_height="wrap_content"/>
        
        <TextView android:id="@+id/groupCTv"
            android:text="@string/groupC"
            android:gravity="center"
            android:textSize="16sp"
	        android:textColor="@color/black"
            android:layout_weight="1.0"
            android:layout_width="0dip"
            android:layout_height="wrap_content"/>
        
        <TextView android:id="@+id/groupDTv"
            android:text="@string/groupD"
            android:gravity="center"
            android:textSize="16sp"
	        android:textColor="@color/black"
            android:layout_weight="1.0"
            android:layout_width="0dip"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
    <TextView android:id="@+id/saveTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/save"
        android:textSize="16sp" />
    
</LinearLayout>