<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:background="@color/lightBlue">
        
        <Button android:id="@+id/leftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ledTextStyle"
            android:layout_alignParentLeft="true"
            android:padding="5dip"
            android:text="@string/cancel"
            android:background="@color/transparent"/>
        
        <Button android:id="@+id/rightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ledTextStyle"
            android:layout_alignParentRight="true"
            android:padding="5dip"
            android:text="@string/save"
            android:background="@color/transparent"/>
        
    </RelativeLayout>

    <EditText android:id="@+id/passEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dip"
        android:textSize="22sp"
        android:inputType="textVisiblePassword"
        android:hint="@string/passwordHint"
        android:ems="9"
        android:maxLength="16"/>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/passEt"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dip"
        android:text="@string/passwordTips"/>
    
</RelativeLayout>