<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/silverGray">
    
    <TextView android:id="@+id/titleTv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/navyBlue"
        android:textSize="14sp"
        android:text="@string/delete"
        android:padding="15dip"
        android:background="@color/lightGray"/>
    
    <View android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/navyBlue"/>
    
    <TextView android:id="@+id/contentTv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/deleteLedPrompt"
        android:gravity="center"
        android:minHeight="80dip"
        android:padding="16dip"
        android:background="@color/lightGray"/>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">
        
        <Button android:id="@+id/leftButton"
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/cancel"
            android:textSize="13sp"
            android:layout_marginRight="1dip"
            android:background="@color/lightGray"/>
        
        <Button android:id="@+id/rightButton"
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/enter"
            android:textSize="13sp"
            android:layout_marginLeft="1dip"
            android:background="@color/lightGray"/>
        
    </LinearLayout>
        
</LinearLayout>