<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
		<TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:gravity="center"
	        android:text="@string/titleLedEdit"
	        style="@style/titleTextStyle"
	        android:background="@color/lightBlue"/>
		
        <Button android:id="@+id/cancelBtn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:textColor="@color/white"
		    android:background="@color/transparent"
		    android:text="@string/cancel"/>
		
		<Button android:id="@+id/commitBtn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:background="@color/transparent"
		    android:textColor="@color/white"
		    android:text="@string/enter"/>
        
    </RelativeLayout>
    
    <ListView android:id="@+id/ledListView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:dividerHeight="1px"
        android:divider="@color/silverGray">
    </ListView>

    <FrameLayout android:id="@+id/buttonMenuLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </FrameLayout>
    
</LinearLayout>